--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -2,7 +2,8 @@
      (wheel)="zoom($event)"
      (mousedown)="startPan($event)"
      (mousemove)="pan($event)"
-     (mouseup)="endPan()">
+     (mouseup)="endPan()"
+     (mouseout)="endPan()">
   <canvas #gameCanvas class="layer" width="600" height="600"></canvas>
   <canvas #gridCanvas class="layer" width="600" height="600"></canvas>
 </div>
