grid bound calculation.

--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -5,6 +5,6 @@
      (mouseup)="endPan()"
      (mouseout)="endPan()"
      (click)="onCanvasClick($event)">
-  <canvas #gameCanvas class="layer" width="600" height="600"></canvas>
-  <canvas #gridCanvas class="layer" width="600" height="600"></canvas>
+  <canvas #gameCanvas class="layer" [attr.width]="CANVAS_WIDTH" [attr.height]="CANVAS_HEIGHT"></canvas>
+  <canvas #gridCanvas class="layer" [attr.width]="CANVAS_WIDTH" [attr.height]="CANVAS_HEIGHT"></canvas>
 </div>
