--- a/src/app/game-overview/grid/grid.component.html
+++ b/src/app/game-overview/grid/grid.component.html
@@ -7,4 +7,5 @@
      (click)="onCanvasClick($event)">
   <canvas #gameCanvas class="layer" [attr.width]="CANVAS_WIDTH" [attr.height]="CANVAS_HEIGHT"></canvas>
   <canvas #gridCanvas class="layer" [attr.width]="CANVAS_WIDTH" [attr.height]="CANVAS_HEIGHT"></canvas>
+  <div class="generation-counter">Generation: {{generationCount}}</div>
 </div>
