--- a/src/app/game-overview/game-overview.component.html
+++ b/src/app/game-overview/game-overview.component.html
@@ -1,2 +1,4 @@
-<app-sidebar></app-sidebar>
-<app-grid></app-grid>
+<div class="game-overview">
+  <app-sidebar></app-sidebar>
+  <app-grid></app-grid>
+</div>
