--- a/src/app/game-overview/grid/grid.component.css
+++ b/src/app/game-overview/grid/grid.component.css
@@ -1,10 +1,25 @@
 .canvas-container {
   position: relative;
-  width: 600px;
-  height: 600px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
+
 .layer {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
+}
+
+.generation-counter {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-size: 1rem;
+  z-index: 2;
 }
