--- a/src/app/game-overview/sidebar/sidebar.component.html
+++ b/src/app/game-overview/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar" [class.minimized]="isSidebarMinimized">
-  <mat-icon class="toggle-icon" (click)="toggleSidebar()" matTooltip="Toggle Sidebar">
+  <mat-icon class="toggle-icon" (click)="toggleSidebar()">
     {{ isSidebarMinimized ? 'keyboard_arrow_right' : 'keyboard_arrow_left' }}
   </mat-icon>
 
