added rules dialog

--- a/src/app/game-overview/sidebar/sidebar.component.html
+++ b/src/app/game-overview/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   </mat-icon>
 
   <div class="sidebar-content">
-    <button class="rules">Rules</button>
+    <button class="rules" (click)="openRulesDialog()">Rules</button>
     <button class="encyclopedia">Encyclopedia</button>
     <mat-divider></mat-divider>
     <div class="flex-spacer"></div>
