--- a/src/app/game-overview/sidebar/sidebar.component.html
+++ b/src/app/game-overview/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
     <button class="rules" (click)="openRulesDialog()">Rules</button>
     <button class="encyclopedia">Encyclopedia</button>
     <mat-divider></mat-divider>
+    <!-- <app-edit-tools></app-edit-tools> -->
     <div class="flex-spacer"></div>
     <app-game-controls></app-game-controls>
   </div>
