--- a/src/app/game-overview/sidebar/rules/rules.component.css
+++ b/src/app/game-overview/sidebar/rules/rules.component.css
@@ -1,56 +1,50 @@
-:host {
+.content {
   display: block;
   padding: 16px;
-  max-width: 80vw;
-  max-height: 80vh;
+  max-width: 60vw;
+  max-height: 60vh;
   overflow-y: scroll;
   overflow-x: hidden;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #e3e3e3; /* Light teal background */
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.content {
-  margin: 0 auto;
+  background-color: #3b3b3b;
 }
 
 .heading {
   margin-bottom: 16px;
-  color: #006064; /* Dark teal for headings */
+  color: #ffffff;
 }
 
 .paragraph {
   margin-bottom: 16px;
-  color: #004d4d; /* Dark teal for paragraph text */
+  color: #ffffff;
   line-height: 1.6;
 }
 
 .divider {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, #e0f7fa, #006064, #e0f7fa); /* Gradient line */
+  background-image: linear-gradient(to right, #ffffff, #838383, #ffffff);
   margin: 16px 0;
 }
 
 .rule {
   display: flex;
-  align-items: center; /* Center the content vertically */
-  gap: 16px; /* Create a gap between the image and the text */
-  margin-bottom: 16px;
+  align-items: center;
+  gap: 16px;
+  margin: 8px 2vw;
 }
 
 .rule h3 {
   flex: 1;
   margin: 0;
-  color: #006064; /* Dark teal for headings */
+  color: #ffffff;
 }
 
 .rule-image-left, .rule-image-right {
-  max-width: 40%;
+  max-width: 30%;
   height: auto;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
 }
 
 .rule-image-right {
