--- a/src/app/game-overview/sidebar/sidebar.component.css
+++ b/src/app/game-overview/sidebar/sidebar.component.css
@@ -23,11 +23,11 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
-  color: white; /* Set a default color */
+  color: white;
 }
 
 .sidebar .toggle-icon:hover {
-  color: lightgray; /* Set a hover color */
+  color: lightgray;
 }
 
 .sidebar .sidebar-content {
@@ -35,12 +35,12 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  transition: opacity 0.3s ease 0.3s; /* Added delay */
+  transition: opacity 0.3s ease 0.3s;
 }
 
 .sidebar.minimized .sidebar-content {
   opacity: 0;
-  transition: opacity 0.1s ease; /* Adjusted transition time */
+  transition: opacity 0.1s ease;
   pointer-events: none;
 }
 
@@ -67,6 +67,14 @@
 .sidebar mat-divider {
   margin-top: 10px;
   width: 100%;
+}
+
+.sidebar app-edit-tools {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 30px;
 }
 
 .sidebar app-game-controls {
