--- a/src/app/game-overview/sidebar/sidebar.component.html
+++ b/src/app/game-overview/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
 
   <div class="sidebar-content">
     <button class="rules" (click)="openRulesDialog()">Rules</button>
-    <button class="encyclopedia">Encyclopedia</button>
+    <button class="encyclopedia" (click)="openEncyclopediaDialog()">Encyclopedia</button>
     <mat-divider></mat-divider>
     <!-- <app-edit-tools></app-edit-tools> -->
     <div class="flex-spacer"></div>
