--- a/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
+++ b/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
@@ -43,27 +43,28 @@ ul li {
   margin-bottom: 16px;
 }
 
-.pattern-row {
+h2 {
+  margin: 0 0 8px 0;
+  text-align: center;
+  font-size: 2.5em;
+}
+
+.pattern-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
-  margin: 8px 0;
+  justify-content: space-between;
+  gap: 15px;
 }
 
 .pattern {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
+  width: 20%;
+  min-width: 200px;
   background-color: #2f2f2f;
   padding: 10px;
   border-radius: 5px;
-}
-
-.pattern h3 {
-  margin: 0 0 8px 0;
-  text-align: center;
-  font-size: 1.2em;
 }
 
 .pattern-image {
