--- a/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
+++ b/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
@@ -68,7 +68,7 @@ h2 {
 }
 
 .pattern-image {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
