--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.html
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.html
@@ -42,7 +42,7 @@
 
   <!-- Toroidal Grid Control -->
   <div class="checkbox-control-group">
-    <mat-checkbox color="accent" [(ngModel)]="toroidalGrid" (change)="setToroidalGrid(toroidalGrid)"></mat-checkbox>
+    <mat-checkbox color="primary" [(ngModel)]="toroidalGrid" (change)="setToroidalGrid(toroidalGrid)"></mat-checkbox>
     <label>Toroidal Grid</label>
   </div>
 </div>
