--- a/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
+++ b/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.css
@@ -2,51 +2,43 @@
   display: block;
   padding: 16px;
   width: 60vw;
+  max-width: 1200px;
+  margin: 0 auto;
   height: 60vh;
   overflow-y: scroll;
   overflow-x: hidden;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #3b3b3b;
-  color: #ffffff;
-  line-height: 1.6;
+  background-color: var(--background-color-dark);
+  color: var(--text-color);
+  line-height: 1.8;
+  border-radius: 10px;
+  box-shadow: var(--shadow-darker);
 }
 
 .main-heading {
   margin-bottom: 16px;
   font-size: 2em;
   text-align: center;
+  color: var(--accent-color);
 }
 
 .heading {
   margin-bottom: 16px;
   font-size: 1.5em;
+  color: var(--accent-color);
 }
 
 .paragraph {
   margin-bottom: 16px;
+  font-size: 1em;
+  line-height: 1.6;
 }
 
 .divider {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, #ffffff, #838383, #ffffff);
+  background-image: linear-gradient(to right, var(--accent-color), var(--divider-color), var(--accent-color));
   margin: 16px 0;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-ul li {
-  margin-bottom: 16px;
-}
-
-h2 {
-  margin: 0 0 8px 0;
-  text-align: center;
-  font-size: 2.5em;
 }
 
 .pattern-container {
@@ -60,18 +52,48 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  width: 13vw;
   min-width: 200px;
-  background-color: #2f2f2f;
+  background-color: var(--background-color-darker);
   padding: 10px;
   border-radius: 5px;
+  box-shadow: var(--shadow-light);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .pattern-image {
   width: 100%;
   height: auto;
   border-radius: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--shadow-dark);
+}
+
+mat-icon {
+  cursor: pointer;
+  background-color: transparent;
+  color: var(--primary-color);
+}
+
+button {
+  cursor: pointer;
+  background-color: var(--background-color-dark);
+  box-shadow: none;
+  border: none;
+  transition: 0.3s ease;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: var(--background-color-darker);
+  transform: scale(1.05);
 }
 
 .pattern p {
