--- a/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.html
+++ b/src/app/game-overview/sidebar/encyclopedia/encyclopedia.component.html
@@ -12,10 +12,12 @@
     <p class="paragraph">{{ category.description }}</p>
     <div class="pattern-container">
       <div class="pattern" *ngFor="let pattern of category.patterns">
-        <h3>{{ pattern.title }}</h3>
+        <div class="header">
+          <h3>{{ pattern.title }}</h3>
+          <button (click)="copyToClipboard(pattern.rle)" title="Copy"><mat-icon>content_copy</mat-icon></button>
+        </div>
         <img class="pattern-image" [src]="pattern.img" [alt]="pattern.title">
         <p class="paragraph">{{ pattern.description }}</p>
-        <button (click)="copyToClipboard(pattern.rle)"><mat-icon>content_copy</mat-icon></button>
       </div>
     </div>
   </div>
