--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.css
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.css
@@ -32,6 +32,10 @@
   background-color: #ffffff44;
 }
 
+.highlighted {
+  background-color: rgba(63, 81, 181, 0.3) !important;
+}
+
 .input-control-group {
   width: 100%;
   flex-direction: column;
