--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.html
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.html
@@ -11,7 +11,7 @@
         <mat-icon>keyboard_arrow_left</mat-icon>
       </div>
     </button>
-    <button (click)="onStopAutoGenerationClick()" title="Stop Auto Generation">
+    <button (click)="onStopAutoGenerationClick()" title="Stop Auto Generation" [class.highlighted]="highlightedButton === 'pause'">
       <div class="icon-container">
         <mat-icon>pause</mat-icon>
       </div>
@@ -21,7 +21,7 @@
         <mat-icon>keyboard_arrow_right</mat-icon>
       </div>
     </button>
-    <button (click)="onStartAutoGenerationClick()" title="Start Auto Generation">
+    <button (click)="onStartAutoGenerationClick()" title="Start Auto Generation" [class.highlighted]="highlightedButton === 'play'">
       <div class="icon-container">
         <mat-icon>keyboard_double_arrow_right</mat-icon>
       </div>
