--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.css
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.css
@@ -9,6 +9,7 @@
 
 .control-group {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 10px;
 }
@@ -102,4 +103,11 @@
   margin: 0;
   font-size: 16px;
   cursor: pointer;
+}
+
+.divider {
+  height: 1px;
+  background-color: #ffffff22; /* Adjust color to match your design */
+  margin: 10px 0; /* Add vertical margin to create separation */
+  width: 80%; /* Adjust width to your preference */
 }
