--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.css
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.css
@@ -15,8 +15,8 @@
 }
 
 .control-group button, .control-group mat-icon-button {
-  width: 3.4vw;  /* Set the width as per your requirement */
-  height: 3.4vw; /* Make height equal to width to keep the buttons square */
+  width: 3.4vw;
+  height: 3.4vw;
   padding: 5px;
   font-size: 16px;
   border: none;
@@ -27,6 +27,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.return-to-checkpoint-button {
+  width: calc(6.8vw + 10px) !important;
+  flex-direction: column;
+}
+
+.return-to-checkpoint-button .icon-container,
+.return-to-checkpoint-button .text-container {
+  display: flex;
+}
+
+.return-to-checkpoint-button .text-container {
+  font-size: 14px;
+  color: white;
 }
 
 .control-group button:hover, .control-group mat-icon-button:hover {
@@ -41,17 +56,18 @@
   width: 100%;
   flex-direction: column;
   gap: 5px;
-  margin-top: 10px;
+  margin-bottom: 10px ;
 }
 
 .input-control-group input[type=range] {
   -webkit-appearance: none;
-  width: 100%;
+  width: 95%;
   border-radius: 5px;
   background: #ffffff22;
   outline: none;
   box-sizing: border-box;
   height: 8px;
+  margin-right: 5%;
 }
 
 .input-control-group input[type=range]::-webkit-slider-thumb {
@@ -89,6 +105,8 @@
 }
 
 .checkbox-control-group {
+  margin-right: 5%;
+  margin-bottom: 5px;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -106,8 +124,8 @@
 }
 
 .divider {
-  height: 1px;
-  background-color: #ffffff22; /* Adjust color to match your design */
-  margin: 10px 0; /* Add vertical margin to create separation */
-  width: 80%; /* Adjust width to your preference */
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.25);
+  width: 100%;
+  margin: 10px 15px 10px 0;
 }
