--- a/src/app/game-overview/sidebar/sidebar.component.html
+++ b/src/app/game-overview/sidebar/sidebar.component.html
@@ -4,9 +4,11 @@
   </mat-icon>
 
   <div class="sidebar-content">
+    <h1 class="title">Game of Life</h1>
+    <div class="divider"></div>
     <button class="rules" (click)="openRulesDialog()">Rules</button>
     <button class="encyclopedia" (click)="openEncyclopediaDialog()">Encyclopedia</button>
-    <mat-divider></mat-divider>
+
     <!-- <app-edit-tools></app-edit-tools> -->
     <div class="flex-spacer"></div>
     <app-game-controls></app-game-controls>
