--- a/src/app/game-overview/sidebar/game-controls/game-controls.component.css
+++ b/src/app/game-overview/sidebar/game-controls/game-controls.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  color: white;
+  color: var(--text-color);
   align-items: center;
   flex-wrap: wrap;
 }
@@ -22,8 +22,8 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #ffffff22;
-  color: white;
+  background-color: var(--background-color-darker);
+  color: var(--text-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,11 +41,11 @@
 
 .return-to-checkpoint-button .text-container {
   font-size: 14px;
-  color: white;
+  color: var(--text-color);
 }
 
 .control-group button:hover, .control-group mat-icon-button:hover {
-  background-color: #ffffff44;
+  background-color: var(--divider-color);
 }
 
 .highlighted {
@@ -63,7 +63,7 @@
   -webkit-appearance: none;
   width: 95%;
   border-radius: 5px;
-  background: #ffffff22;
+  background: var(--background-color-dark);
   outline: none;
   box-sizing: border-box;
   height: 8px;
@@ -74,7 +74,7 @@
   -webkit-appearance: none;
   width: 20px;
   height: 20px;
-  background: #fff;
+  background: var(--text-color);
   border-radius: 50%;
   cursor: pointer;
   margin-top: -6px;
@@ -83,7 +83,7 @@
 .input-control-group input[type=range]::-moz-range-thumb {
   width: 20px;
   height: 20px;
-  background: #fff;
+  background: var(--text-color);
   border-radius: 50%;
   cursor: pointer;
 }
@@ -135,13 +135,13 @@
   left: 0;
   height: 20px;
   width: 20px;
-  background-color: #ffffff22;
+  background-color: var(--background-color-dark);
   border-radius: 4px;
   transform: translateY(-55%);
 }
 
 .custom-checkbox:hover input ~ .checkmark {
-  background-color: #aaa;
+  background-color: var(--divider-color);
 }
 
 .custom-checkbox input:checked ~ .checkmark {
@@ -163,7 +163,7 @@
   top: 3px;
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid var(--text-color);
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
