--- a/src/app/game-overview/sidebar/sidebar.component.css
+++ b/src/app/game-overview/sidebar/sidebar.component.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  color: white;
+  color: var(--text-color);
   align-items: flex-start;
   transition: width 0.3s ease;
 }
@@ -23,11 +23,11 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
-  color: white;
+  color: var(--text-color);
 }
 
 .sidebar .toggle-icon:hover {
-  color: lightgray;
+  color: var(--light-gray);
 }
 
 .sidebar .sidebar-content {
@@ -51,7 +51,7 @@
 .sidebar .rules, .sidebar .encyclopedia {
   background: none;
   border: none;
-  color: white;
+  color: var(--text-color);
   font-size: 24px;
   cursor: pointer;
   padding: 10px;
