--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #3f51b5; /* Indigo */
-  --accent-color: #e91e63; /* Pink */
+  --primary-color: #3f51b5;
+  --accent-color: #e91e63;
   --background-color-dark: #3b3b3b;
   --background-color-darker: #2f2f2f;
   --text-color: #ffffff;
@@ -8,12 +8,15 @@
   --shadow-light: 0 4px 6px rgba(0, 0, 0, 0.1);
   --shadow-dark: 0 4px 6px rgba(0, 0, 0, 0.2);
   --shadow-darker: 0 4px 6px rgba(0, 0, 0, 0.5);
+  --light-gray: lightgray;
 }
 
 body {
   margin: 0;
   overflow: hidden;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  user-select: none;
+  height: 100%;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html { height: 100%; }
