--- a/src/app/game-overview/sidebar/sidebar.component.css
+++ b/src/app/game-overview/sidebar/sidebar.component.css
@@ -2,7 +2,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 16vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.9);
   padding: 20px;
@@ -54,7 +53,7 @@
   color: var(--text-color);
   font-size: 24px;
   cursor: pointer;
-  padding: 10px;
+  padding: 10px 0;
   text-align: left;
   width: 100%;
   box-sizing: border-box;
