refactoring + interface extraction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-game-overview></app-game-overview>
+<div class="game-overview">
+  <app-sidebar></app-sidebar>
+  <app-grid></app-grid>
+</div>
