--- a/src/app/sidebar/rules/rules.component.html
+++ b/src/app/sidebar/rules/rules.component.html
@@ -10,21 +10,21 @@
 
   <div class="rule">
     <h3 class="text-align-right">Any live cell with fewer than two live neighbours dies, as if by underpopulation.</h3>
-    <img class="rule-image-left" src="assets/under.gif" alt="Underpopulation visualization">
+    <img class="rule-image-left" src="./assets/under.gif" alt="Underpopulation visualization">
   </div>
 
   <div class="rule">
-    <img class="rule-image-right" src="assets/stable.gif" alt="Stable population visualization">
+    <img class="rule-image-right" src="./assets/stable.gif" alt="Stable population visualization">
     <h3>Any live cell with two or three live neighbours lives on to the next generation.</h3>
   </div>
 
   <div class="rule">
     <h3 class="text-align-right">Any live cell with more than three live neighbours dies, as if by overpopulation.</h3>
-    <img class="rule-image-left" src="assets/over.gif" alt="Overpopulation visualization">
+    <img class="rule-image-left" src="./assets/over.gif" alt="Overpopulation visualization">
   </div>
 
   <div class="rule">
-    <img class="rule-image-right" src="assets/rep.gif" alt="Reproduction visualization">
+    <img class="rule-image-right" src="./assets/rep.gif" alt="Reproduction visualization">
     <h3>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</h3>
   </div>
 </div>
