--- a/src/app/grid/context-menu/context-menu.component.html
+++ b/src/app/grid/context-menu/context-menu.component.html
@@ -1,13 +1,13 @@
 <div class="context-menu">
+  <div cdkFocusInitial style="opacity: 0; position: absolute;"></div>
   <div class="info">
-    <span class="info-element">Coordinates: (5480|2720)</span>
-    <span class="info-element">State: Alive</span>
+    <span class="info-element">Coordinates: ({{ x }},{{ y }})</span>
   </div>
   <div class="divider"></div>
   <button class="button" (click)="pasteRle()">Paste</button>
   <div class="divider"></div>
-  <button class="button" (click)="insertRle()">Insert Pattern</button>
-  <input class="input" type="text" required placeholder="b2ob$o2bo$b2o!" title="RLE encoded pattern">
+  <button class="button" (click)="insertRle(rleInput.value)">Insert Pattern</button>
+  <input #rleInput class="input" type="text" required placeholder="b2ob$o2bo$b2o!" title="RLE encoded pattern">
   <div class="divider"></div>
   <button class="button" (click)="selectArea()">Select Area</button>
   <div class="divider"></div>
