--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,7 +1,7 @@
 <div class="canvas-container"
      appCanvasPan [gridSize]="gridProperties.gridSize" (panUpdated)="handlePan($event)"
      appCanvasZoom (zoomRequested)="handleZoom()"
-     appCanvasClick [totalPanDistance]="gridProperties.totalPanDistance" (canvasClicked)="handleCanvasClick($event)" (rightClicked)="handleRightClick($event)">
+     appCanvasClick [totalPanDistance]="gridProperties.totalPanDistance" (canvasClicked)="handleCanvasClick($event)" (rightClicked)="handleRleStrings($event)">
   <canvas #gameCanvas class="layer" [attr.width]="drawingContext.CanvasWidth" [attr.height]="drawingContext.CanvasHeight"></canvas>
   <canvas #gridCanvas class="layer" [attr.width]="drawingContext.CanvasWidth" [attr.height]="drawingContext.CanvasHeight"></canvas>
   <div class="generation-counter">Generation: {{gameProperties.generationCount}}</div>
