--- a/src/app/sidebar/game-controls/game-controls.component.css
+++ b/src/app/sidebar/game-controls/game-controls.component.css
@@ -11,12 +11,12 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 4%;
+  gap: 10px;
 }
 
 .control-group button, .control-group mat-icon-button {
-  width: 20%;
-  aspect-ratio: 1 / 1;
+  width: 55px;
+  height: 55px;
   padding: 5px;
   font-size: 16px;
   border: none;
@@ -30,8 +30,7 @@
 }
 
 .return-to-checkpoint-button {
-  width: calc(7.2vw + 10px) !important;
-  aspect-ratio: 2.2 / 1 !important;
+  width: calc(2*55px + 10px) !important;
   flex-direction: column;
 }
 
@@ -57,18 +56,16 @@
   width: 100%;
   flex-direction: column;
   gap: 5px;
-  margin-bottom: 10px ;
 }
 
 .input-control-group input[type=range] {
   -webkit-appearance: none;
-  width: 95%;
+  width: 98%;
   border-radius: 5px;
   background: var(--background-color-dark);
   outline: none;
   box-sizing: border-box;
   height: 8px;
-  margin-right: 5%;
 }
 
 .input-control-group input[type=range]::-webkit-slider-thumb {
@@ -109,8 +106,8 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-right: 5%;
-  margin-top: 10px;
+  margin-right: 15px;
+  margin-top: 5px;
 }
 
 .custom-checkbox {
@@ -173,11 +170,14 @@
   height: 2px;
   background-image: linear-gradient(to right, var(--primary-color), var(--divider-color));
   width: 100%;
-  margin: 10px 15px 10px 0;
 }
 
 .text-container {
   width: 50px;
   word-break: break-all;
   overflow-wrap: break-word;
+}
+
+mat-icon {
+  font-size: 26px;
 }
