--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   height: 100vh;
+  width: 250px;
   background-color: rgba(0, 0, 0, 0.9);
   padding: 20px;
   display: flex;
@@ -63,25 +64,17 @@
   color: rgba(255, 255, 255, 0.6);
 }
 
-.sidebar app-edit-tools {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-bottom: 30px;
-}
-
 .sidebar app-game-controls {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin-bottom: 5vh;
+  margin-bottom: 40px;
 }
 
 .divider {
   height: 2px;
   background-image: linear-gradient(to right, var(--primary-color), var(--divider-color));
-  width: 95%;
+  width: 100%;
   margin: 10px 15px 10px 0;
 }
