--- a/src/app/sidebar/game-controls/game-controls.component.html
+++ b/src/app/sidebar/game-controls/game-controls.component.html
@@ -42,7 +42,7 @@
         <mat-icon>restore</mat-icon>
       </div>
       <div class="text-container">
-        Generation: {{ checkpointGeneration }}
+        Gen: {{ checkpointGeneration }}
       </div>
     </button>
     <div class="divider"></div>
