--- a/src/app/grid/context-menu/context-menu.component.css
+++ b/src/app/grid/context-menu/context-menu.component.css
@@ -3,27 +3,45 @@
   flex-direction: column;
   width: 200px;
   transition: opacity 0.3s ease 0.3s;
-  background-color: var(--background-color-dark);
+  background-color: rgba(0, 0, 0, 0.9);
   padding: 10px;
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: lightgray;
   width: 100%;
+}
+
+.coordinates {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.insert-form {
+  display: flex;
+  flex-direction: column;
+  color: lightgray;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.insert-form:hover {
+  background-color: #838383;
 }
 
 .button {
   background: none;
   border: none;
   color: var(--text-color);
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
-  padding: 10px 0;
+  padding: 10px 2px;
   text-align: left;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .button:hover {
@@ -31,13 +49,21 @@
 }
 
 .input {
-  margin-bottom: 5px;
   background-color: #b6b6b6;
   color: #252525;
   border-radius: 5px;
-  border: none;
+  border: 1px solid #b6b6b6;
   height: 30px;
   font-size: 16px;
+}
+
+.input:focus {
+  outline: none !important;
+}
+
+.invalid-input {
+  border-color: darkred !important;
+  background-color: #ffb4b4;
 }
 
 .divider {
