--- a/src/app/sidebar/rules/rules.component.css
+++ b/src/app/sidebar/rules/rules.component.css
@@ -22,9 +22,10 @@
 
 .divider {
   border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, var(--text-color), var(--divider-color), var(--text-color));
+  height: 2px;
+  background-image: linear-gradient(to right, var(--primary-color), var(--divider-color), var(--primary-color));
   margin: 16px 0;
+  width: 100%;
 }
 
 .rule {
@@ -35,6 +36,7 @@
   background-color: var(--background-color-darker);
   padding: 10px;
   border-radius: 5px;
+  width: 100%;
 }
 
 .rule h3 {
