--- a/src/app/sidebar/encyclopedia/encyclopedia.component.css
+++ b/src/app/sidebar/encyclopedia/encyclopedia.component.css
@@ -19,13 +19,13 @@
   margin-bottom: 16px;
   font-size: 2em;
   text-align: center;
-  color: var(--accent-color);
+  color: var(--text-color);
 }
 
 .heading {
   margin-bottom: 16px;
   font-size: 1.5em;
-  color: var(--accent-color);
+  color: var(--text-color);
 }
 
 .paragraph {
@@ -36,8 +36,8 @@
 
 .divider {
   border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, var(--accent-color), var(--divider-color), var(--accent-color));
+  height: 2px;
+  background-image: linear-gradient(to right, var(--primary-color), var(--divider-color), var(--primary-color));
   margin: 16px 0;
 }
 
@@ -98,8 +98,4 @@ button:hover {
 
 .pattern p {
   text-align: center;
-}
-
-::ng-deep .mat-tab-group .mat-tab-label {
-  color: white !important;
 }
