--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,24 @@ body {
 }
 
 html { height: 100%; }
+
+.mat-mdc-tab-group, .mat-mdc-tab-nav-bar {
+  --mdc-tab-indicator-active-indicator-color: #ffffff;
+  --mat-tab-header-disabled-ripple-color: rgba(0, 0, 0, 0.38);
+  --mat-tab-header-pagination-icon-color: #ffffff;
+
+  --mat-tab-header-inactive-label-text-color: grey;
+  --mat-tab-header-active-label-text-color: #ffffff;
+  --mat-tab-header-active-ripple-color: var(--primary-color);
+  --mat-tab-header-inactive-ripple-color: grey;
+  --mat-tab-header-inactive-focus-label-text-color: grey;
+  --mat-tab-header-inactive-hover-label-text-color: grey;
+  --mat-tab-header-active-focus-label-text-color: var(--text-color);
+  --mat-tab-header-active-hover-label-text-color: var(--primary-color);
+  --mat-tab-header-active-focus-indicator-color: var(--primary-color);
+  --mat-tab-header-active-hover-indicator-color: var(--primary-color);
+}
+
+.mat-mdc-dialog-container {
+  --mdc-dialog-container-color: transparent;
+}
